--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>San Valentín</title>
+    <link rel="icon" type="image/jpeg" href="assets/29936F0C-D65B-4665-8FF4-FEA868353579_1_105_c.jpeg">
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
